--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==0.6.0
 certifi==2020.12.5
 chardet==4.0.0
 ci-info==0.2.0
@@ -8,10 +9,13 @@ decorator==4.4.2
 etelemetry==0.2.2
 filelock==3.0.12
 fitz==0.0.1.dev2
+frontend==0.0.3
 future==0.18.2
+h11==0.12.0
 httplib2==0.18.1
 idna==2.10
 isodate==0.6.0
+itsdangerous==1.1.0
 lxml==4.6.2
 networkx==2.5
 nibabel==3.2.1
@@ -22,6 +26,7 @@ pandas==1.2.1
 pathlib==1.0.1
 prov==2.0.0
 pydot==1.4.1
+PyMuPDF==1.18.6
 pyparsing==2.4.7
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
@@ -33,5 +38,7 @@ requests==2.25.1
 scipy==1.6.0
 simplejson==3.17.2
 six==1.15.0
+starlette==0.14.1
 traits==6.2.0
 urllib3==1.26.2
+uvicorn==0.13.3
